@@ -1,3 +1,8 @@
+*uniloader-0.6.7 (11 Oct 2019)
+
+  11 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +uniloader-0.6.7.ebuild:
+  app-metrics/uniloader: version bump to 0.6.7
+
 *uniloader-0.6.6 (01 Oct 2019)
 
   01 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +uniloader-0.6.6.ebuild:
